design update for final thesis approval
updated the strings for student status genitive and nominative.
also updated text area for description, structure and literature in thesisForm.fxml thru styles.css

--- a/src/main/resources/app/thesisForm.fxml
+++ b/src/main/resources/app/thesisForm.fxml
@@ -63,21 +63,21 @@
 
                             <VBox spacing="5" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="2">
                                 <Label text="Cilj rada:" styleClass="field-label"/>
-                                <TextArea fx:id="descriptionArea" prefRowCount="4" wrapText="true"
+                                <TextArea fx:id="descriptionArea" prefHeight="100" wrapText="true"
                                           promptText="Unesite kratak opis..."
                                           styleClass="form-field"/>
                             </VBox>
 
                             <VBox spacing="5" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2">
                                 <Label text="Predložena struktura rada (poglavlja):" styleClass="field-label"/>
-                                <TextArea fx:id="structureArea" prefRowCount="4" wrapText="true"
+                                <TextArea fx:id="structureArea" prefHeight="200" wrapText="true"
                                           promptText="Unesite predloženu strukturu rada..."
                                           styleClass="form-field"/>
                             </VBox>
 
                             <VBox spacing="5" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="2">
                                 <Label text="Literatura:" styleClass="field-label"/>
-                                <TextArea fx:id="literatureArea" prefRowCount="3" wrapText="true"
+                                <TextArea fx:id="literatureArea" prefHeight="200" wrapText="true"
                                           promptText="Unesite reference..."
                                           styleClass="form-field"/>
                             </VBox>
