--- a/src/main/resources/templates/final_thesis_approval_template.html
+++ b/src/main/resources/templates/final_thesis_approval_template.html
@@ -134,7 +134,7 @@
 </table>
 
 <div class="justify content-paragraph">
-    Na osnovu člana 127. stav 1. tačka s) Statuta Univerziteta u Zenici, a u vezi s članom 206. Statuta Univerziteta u Zenici i procedurom za prijavu, odobrenje, izradu i odbranu diplomskog rada, na zahtjev {{studentNameGenitive}}, studenta {{studentStatusGenitive}} Politehničkog fakulteta Univerziteta u Zenici, dekan Politehničkog fakulteta Univerziteta u Zenici donosi
+    Na osnovu člana 127. stav 1. tačka s) Statuta Univerziteta u Zenici, a u vezi s članom 206. Statuta Univerziteta u Zenici i procedurom za prijavu, odobrenje, izradu i odbranu diplomskog rada, na zahtjev {{studentNameGenitive}}, {{studentStatusGenitive}} Politehničkog fakulteta Univerziteta u Zenici, dekan Politehničkog fakulteta Univerziteta u Zenici donosi
 </div>
 
 <div class="center title-block">
@@ -146,7 +146,7 @@
     <tr>
         <td class="num-col">1.</td>
         <td class="text-col">
-            {{studentFullName}}, student {{studentStatusNominative}} na odsjeku {{departmentName}}, Politehničkog fakulteta Univerziteta u Zenici, određuje se zadatak za izradu diplomskog/završnog rada na {{studentCycle}} ciklusu studija Politehničkog fakulteta Univerziteta u Zenici, sa slijedećom temom:
+            {{studentFullName}}, {{studentStatusNominative}} na odsjeku {{departmentName}}, Politehničkog fakulteta Univerziteta u Zenici, određuje se zadatak za izradu diplomskog/završnog rada na {{studentCycle}} ciklusu studija Politehničkog fakulteta Univerziteta u Zenici, sa slijedećom temom:
         </td>
     </tr>
 </table>
