--- a/src/main/resources/app/thesisDetails.fxml
+++ b/src/main/resources/app/thesisDetails.fxml
@@ -108,64 +108,15 @@
                                     <Button text="Uredi" onAction="#handleEdit" styleClass="edit-button-outline"/>
                                 </HBox>
 
-                                <VBox spacing="15" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-
+                                <VBox spacing="15">
                                     <VBox spacing="3">
                                         <Text text="Dokumenti" styleClass="section-title"/>
                                         <Text text="Pregled i generisanje službenih dokumenata" styleClass="page-subtitle"/>
                                     </VBox>
 
-                                    <HBox styleClass="document-card, document-green" alignment="CENTER_LEFT" spacing="10">
-                                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                                            <Text text="Rješenje o izradi završnog rada" styleClass="document-title"/>
-                                        </VBox>
-                                        <Button text="⬇" styleClass="document-icon-btn"/>
-                                        <Button text="👁" styleClass="document-icon-btn"/>
-                                        <Button text="✏" styleClass="document-icon-btn" onAction="#handleOpenFinalThesisApproalReport"/>
-                                    </HBox>
-
-                                    <HBox styleClass="document-card, document-green" alignment="CENTER_LEFT" spacing="10">
-                                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                                            <Text text="Rješenje o formiranju Komisije" styleClass="document-title"/>
-                                        </VBox>
-                                        <Button text="⬇" styleClass="document-icon-btn"/>
-                                        <Button text="👁" styleClass="document-icon-btn"/>
-                                        <Button text="✏" styleClass="document-icon-btn" />
-                                    </HBox>
-
-                                    <HBox styleClass="document-card, document-green" alignment="CENTER_LEFT" spacing="10">
-                                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                                            <Text text="Obavijest" styleClass="document-title"/>
-                                        </VBox>
-                                        <Button text="⬇" styleClass="document-icon-btn"/>
-                                        <Button text="👁" styleClass="document-icon-btn"/>
-                                        <Button text="✏" styleClass="document-icon-btn"/>
-                                    </HBox>
-
-                                    <HBox styleClass="document-card, document-yellow" alignment="CENTER_LEFT" spacing="10">
-                                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                                            <Text text="Zapisnik o pismenom dijelu diplomskog rada" styleClass="document-title"/>
-                                        </VBox>
-                                        <Button text="👁" styleClass="document-icon-btn" onAction="#handleOpenWrittenExamReport"/>
-                                        <Button text="✏" styleClass="document-icon-btn" onAction="#handleOpenWrittenExamReport"/>
-                                    </HBox>
-
-                                    <HBox styleClass="document-card, document-yellow" alignment="CENTER_LEFT" spacing="10">
-                                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                                            <Text text="Zapisnik sa odbrane" styleClass="document-title"/>
-                                        </VBox>
-                                        <Button text="👁" styleClass="document-icon-btn" onAction="#handleOpenDefenseReport"/>
-                                        <Button text="✏" styleClass="document-icon-btn" onAction="#handleOpenDefenseReport"/>
-                                    </HBox>
-
-                                    <HBox styleClass="document-card, document-gray" alignment="CENTER_LEFT" spacing="10">
-                                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
-                                            <Text text="Uvjerenje o završenom ciklusu" styleClass="document-title"/>
-                                        </VBox>
-                                        <Button text="+" styleClass="document-icon-btn" style="-fx-font-size: 18px; -fx-font-weight:bold;"/>
-                                    </HBox>
-
+                                    <VBox fx:id="documentsContainer" spacing="10"/>
                                 </VBox>
+
                             </VBox>
 
                             <VBox spacing="20" prefWidth="320">
@@ -280,7 +231,5 @@
                                    StackPane.alignment="CENTER"/>
             </StackPane>
         </center>
-
     </BorderPane>
-
 </AnchorPane>
